--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "helmet": "^3.21.2",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.3",
+    "sequelize-cli": "^5.5.1",
     "serve-favicon": "^2.5.0",
     "winston": "^3.2.1"
   },
